removed dst-ramanujan references

--- a/dst_ramanujan_project/dst_ramanujan.tex
+++ b/dst_ramanujan_project/dst_ramanujan.tex
@@ -36,9 +36,9 @@
 \oddsidemargin=0pt
 \evensidemargin=0pt
 
-\def\Acronimo{Universality and  Quantum Information in the Dynamics\\ of Nonintegrable Systems}
+\def\Acronimo{Universalities in the Dynamics\\ of Nonintegrable Systems}
 \hypersetup{
-    pdftitle={\Acronimo{}, DST Ramanujan - 2016},    % title
+    pdftitle={\Acronimo{}, Research proposal},    % title
     pdfauthor={Analabha Roy},
     colorlinks=true,
     citecolor=black,
@@ -50,7 +50,7 @@
 \pagestyle{fancy}
 \fancyfoot[C]{Page \thepage~of \pageref{LastPage}}
 \fancyhead[l]{\Acronimo{}}
-\fancyhead[r]{Analabha Roy \\ DST Ramanujan Fellowship -2016}
+\fancyhead[r]{Analabha Roy \\ Research Proposal -2016}
 
 
 \renewcommand{\headrulewidth}{0pt}
@@ -98,10 +98,9 @@
   
           \vspace{15mm}
           RESEARCH PROPOSAL\\
-          DEPARTMENT OF SCIENCE AND TECHNOLOGY\\
           \vspace{1cm}
           
-          \textbf{DST Ramanujan Fellowship}\\
+          \textbf{Analabha Roy}\\
           \textbf{2016}
           \vspace{2cm}                   
 
@@ -120,52 +119,6 @@
 
   \end{center}
 \vspace{1cm}
-
-\pagebreak
-\begin{center}
-\textul{Nomination letter format for Ramanujan Fellowship}
-\end{center}
-To,\\
-\begin{list1}
-\item[] {\bf The Secretary,}
-\item[] {\bf Science \& Engineering Research Board (SERB),}
-\item[] {\bf 5 \& 5A, Lower Ground Floor,}
-\item[] {\bf Vasant Square Mall,}
-\item[] {\bf Vasantkunj,}
-\item[] {\bf New Delhi 110 070}\\
-\end{list1}
-
-I wish to nominate {\bf Dr. Analabha Roy} for Ramanujan Fellowship of SERB, Department of Science \& Technology, New Delhi, who is presently working at {\bf The National Institute for Theoretical Physics, Stellenbosch, South Africa}, and is not employed in India. This is to certify\footnote{The institute/ University are expected to have their own selection mechanism to decide the criteria for selection and apply the same before forwarding the
-application for the Ramanujan fellowship} that if the fellowship is offered to {\bf Dr. Analabha Roy}, the institute will provide office and laboratory space along with the necessary facilities to carry out research described in the proposed project. The institute has carried out internal evaluation of the applicant before forwarding the application for the government's prestigious fellowship\footnote{This fellowship is meant for working in new areas and laboratories in order to expand their research capabilities, other than the one where the candidate obtained the doctorate degree from.}.\\
-
-\begin{flushright}
-{\raggedright{}
-\begin{list1}
-\item[]Date :
-\item[]Name:
-\item[]Place:
-\item[]Signature of the Director of the Institute:
-\item[]
-\item[]
-\item[]
-\item[]
-\item[]
-\item[]
-\item[]
-\item[]Seal of the Institute:
-\item[]
-\item[]
-\item[]
-\item[]
-\item[]
-\item[]
-\end{list1}}
-\end{flushright}
-\vspace{1.5in}
-(Nominations must be sent only by Head of the organization/ Institute/ University or
-the person authorized by Head of the organization/ Institute / University, since this is
-an academic position)
-
 \pagebreak
 \section{\sc Broad Subject Area:}
 Physical Sciences
@@ -191,123 +144,6 @@ Fax: +27218083862 \\
 \section{\sc Date of Birth:			}
 March $21$, $1978$
  
-\section{\sc Educational Qualifications:}
-
-{\bf Jadavpur University}, Calcutta, West Bengal INDIA\\
-%{\em Department of Physics} 
-\vspace*{-.2in}
-\begin{list1}
-\item[] Bachelor of Science, First Class in Physics with 
-\item[] Honors  (Distinction in subsidiaries, Maths and Chemistry),  July 1997 to July 2000
-\end{list1}
-{\bf Indian Institute of Technology}, Kanpur, Uttar Pradesh INDIA\\
-%{\em Department of Physics} 
-\vspace*{-.2in}
-\begin{list1}
-\item[] Master of Science, Physics ,  July 2000 to May 2002
-\end{list1}
-{\bf University of Texas at Austin}, Austin, Texas, USA\\
-%{\em Department of Physics} 
-\vspace*{-.2in}
-\begin{list1}
-\item[] Doctor of Philosophy (Ph.D), Physics, August 2002 - May 2009
-\item[] Advisor:  Linda E. Reichl
-\item[] Thesis Title: Dynamics of Quantum Control in Cold-Atom Systems
-\item[] Thesis Link: \url{http://catalog.lib.utexas.edu/record=b7270815~S2}
-\end{list1}
-
-\section{\sc Research Experience}
-
-\subsection{Details of Professional Training and Research Experience}
-\begin{tabular}{|l|l|l|l|}
-\hline
-S. No. & Specifying Period                  & Designation                             & Affiliation\\
-\hline
-1      & Spring 2015 - Present              & Postdoctoral Fellow		      & National Institute for\\ 		&				    &					      & Theoretical Physics, \\
-	&				    &					      & Stellenbosch, South Africa\\ 	
-\hline
-1      & Autumn 2011 - Autumn 2014          & C.S.I.R. Senior 	                      & T.C.M.P, Saha Institute\\
-       &                                    & Research Associate                                  & of Nuclear Physics,  \\
-       &                                    &                                         &  Kolkata,\\         
-       &                                    &                                         & India \\
-\hline
-1      & Autumn 2009 - Autumn 2011          & Postdoctoral Research                   & S.N. Bose National\\
-       &                                    & Fellow                                  & Centre for Basic  \\
-       &                                    &                                         & Sciences, Kolkata,\\         
-       &                                    &                                         & India \\
-\hline
-2      & Summer 2009                        & Postdoctoral Research                   &Center for Complex\\
-       &                                    & Associate                               &Quantum Systems, \\
-       &                                    &                                         &University of Texas at Austin,\\
-       &                                    &                                         &Austin, TX, USA\\
-\hline
-3      & Fall 2005                          & Graduate Research                       &Center for Complex\\
-       & Spring 2006 - Summer 2007          & Assistant                               &Quantum Systems, \\
-       &                                    &                                         &University of Texas at Austin,\\
-       &                                    &                                         &Austin, TX, USA\\
-\hline        
-4      & Spring 2002                        & M.Sc Research Project                   &Indian Institute of\\
-       &                                    &                                         &Technology, Kanpur \\
-       &                                    &                                         &India \\
-\hline
-5      & Summer 2001                        & Vacation Students Program               &Inter-University \\
-       &                                    &                                         &Centre for Astronomy\\
-       &                                    &                                         &and Astrophysics, \\
-       &                                    &                                         &Pune, India\\
-\hline
-6      & 1998 - 2000                        & Undergraduate Research                  &Jadavpur University\\
-       &                                    & Project                                 &Kolkata, India\\
-\hline
-\end{tabular} 
-\subsection{Publications}
-\begin{enumerate}
-\item
-L. Pucci, \textbf{A. Roy}, and M. Kastner\footnote{\large{\hl{Corresponding Author}}}, '\textit{Simulation of Quantum Spin Dynamics by Phase Space Sampling of BBGKY Trajectories}'. In review; available at arXiv:1510.03768 (2015).
-\item
-\textbf{A. Roy} and A. Das\footnotemark[\value{footnote}] '\textit{Fate of dynamical many-body localization in the presence of disorder}', Phys. Rev. B, {\bf 91}, 121106(R) (2015).
-\item
-\textbf{A. Roy}\footnotemark[\value{footnote}], '\textit{Nonequilibrium Dynamics of Ultracold Fermi Superfluids}', Invited mini-review (NCNSD $2012$),
-Eur. Phys. J. ST, {\bf 222} (3-4), 975-993 (2013).
-\item
-\textbf{A. Roy}\footnotemark[\value{footnote}] , R. Dasgupta, S. Modak, A.Das, and K. Sengupta, '\textit{ Periodic dynamics of fermionic superfluids in the bcs regime}',  J. Phys.: Condens. Matter, {\bf 25}, 205703 (2013).
-\item
-\textbf{A. Roy}\footnotemark[\value{footnote}] , '\textit{Dynamics of quantum quenching for BCS-BEC systems in the shallow BEC regime}', Eur. Phys. J. {Plus}, {\bf 127}:3, 34 (2012).
- \item 
-\textbf{A. Roy} and L.E. Reichl\footnotemark[\value{footnote}], '\textit{Quantum Control  of Interacting Bosons in Periodic Optical Lattice}',Physica {E}, {\bf 42}, 1627-1632 (2010).
-\item
-\textbf{A. Roy} and L.E.Reichl\footnotemark[\value{footnote}], '\textit{Coherent Control of Trapped Bosons}', Phys Rev {A} {\bf 77}, 033418 (2008).
-\item
-\textbf{A. Roy} and J.K. Bhattacharjee\footnotemark[\value{footnote}],'\textit{Chaos in the Quantum Double Well Oscillator: The Ehrenfest View Revisited}' Phys. Lett. {A}, {\bf 288}/1-3 (2001).
-\end{enumerate}
- 
-\subsection{Papers in Preparation:}
-\begin{enumerate}
-\item
-R. Bachelard, L. Pucci,\textbf{ A. Roy} and M. Kastner, '\textit{Propagation of dipole excitations and quantum correlations in a cold atomic cloud}'
-\item
-L.Pucci, and \textbf{A. Roy}, '\textit{Kinetic theory for long-range quantum spin models}'.
-\item
-\textbf{A. Roy} and A. Das, '\textit{Persistence of single oscillations in periodically driven disordered quantum magnets}'.
-\item
-A. Das and \textbf{A. Roy}, '\textit{Dynamical localization in the exact dynamics of periodically driven systems of interacting fermions}'.
-\end{enumerate}
-
-\section{\sc Details of employment:}
-
-\section{\sc Professional recognitions, awards, fellowships received}
-\begin{enumerate}
-\item
-Scored \textbf{$\bm{1^{st}}$ rank nationwide} (India) in the \textbf{National Eligibility Test} for Lectureship held jointly by the University Grants Commission and the Council of Scientific and Industrial Research (CSIR-UGC NET) on July $17$, $2012$.
-\item
-Awarded the \textbf{Senior Research Associateship} (Scientists' Pool Scheme) from the Council of Scientific and Industrial Research (CSIR), Government of India, in $2011$.
-\item
-Awarded the \textbf{'Dr. D.S. Kothari Postdoctoral Fellowship in Sciences, Medical \& Engineering Sciences'} from the University Grants Commission (UGC) India, in $2011$.
-\item
-Scored $99.2162$ percentile nationwide ($\bm{17^{th}}$ \textbf{rank}) in the \textbf{Joint Entrance Screening Test} (JEST-$2002$) in Physics, $2002$ and scored $99.0000$ percentile nationwide ($\bm{9^{th}}$ rank) in JEST-$2000$.
-\item Awarded \textbf{Certificate of Merit} by the Indian Association of Physics Teachers (IAPT) for being placed in the Nationwide Top $1\%$ in the \textbf{National Graduates Physics Examination} (NGPE), $1997$.
-\end{enumerate}
-
-\pagebreak
 \section{\sc  Proposed area of research and brief outline of proposal}
 
 \subsection{Background and Description }
@@ -322,12 +158,11 @@ The idea of universality asserts that critical phenomena, such as diverging leng
 
 The first part of the proposed project involves refining existing numerical techniques that replicate known critical behaviour in integrable 2d spin models.  For one-dimensional lattices, reliable numerical methods, often based on matrix product states, are available to complement experimental efforts, at least up to intermediate time scales \cite{Schollwoeck11}. However, in two- and higher-dimensional lattices, computational methods for strongly interacting quantum systems out of equilibrium are scarce, and further development of simulation methods is much needed. Thus, novel simulation methods will be applied by combining phase space sampling of the initial state with a systematic semi-classical expansion based on the Born-Bogoliubov-Green-Kirkwood-Yvon (BBGKY) hierarchy. The sampling scheme is inspired by a discrete Wigner representation of spin systems as introduced by Wootters~\cite{wootters}, and was recently used in the context of dynamical simulations~\cite{schachenmayer}. However, that scheme only incorporates quantum fluctuations in the level of the initial state and thus accounts for them only for short times. We combine the sampling with a systematic way of deriving time evolution equations for arbitrary $n$-point correlations, based on the BBGKY hierarchy~\cite{bbgky}.  In 2 dimensions, critical phenomena have been studied analytically in the Kitaev model~\cite{kitaev}. The model itself is built from the Hamiltonian of a hexagonal lattice system with spin exchange parameters that dependent on direction~\cite{kitaev-seminal}. This is one of the few 2d spin models that are integrable, and plaquette operators that commute with the Hamiltonian can be used to diagonalize the system and obtain all eigenstates in the basis of Majorana fermions~\cite{kitaev-seminal}. If the approximate simulation methods described above can replicate these known exponents in the Kitaev model, then it will validate the continuation of these simulations to nonintegrable systems. Therefore, the Kitaev model presents itself as  an ideal benchmark for comparison. 
 
-The next phase of the project will involve breaking integrability in the Kitaev honeycomb lattice. This can be achieved in a straightforward manner by introducing long range interactions, since the Kitaev Hamiltonian remains local in the Majorana basis only if the interactions extend to nearest neighbours in the honeycomb. Long range interactions can be introduced by placing a power law dependence on the inter-site exchange energies. A rapid decay in the exchange as a function of inter-site distance can effectively replicate the nearest-neighbour case, and reducing the power law coefficient can continuously extend the interactions to longer ranges~\cite{bollinger}. The BBGKY-Wigner simulation method has shown incredible promise in this area~\cite{bbgky}, and has already acquired interest from numerous experimental groups working on 2d quantum dynamics. This method can be readily adapted to investigate the onset of universality in long range systems, as well as with anisotropic deformations in the honeycomb lattice that can lead to alternative lattice structures, such as triangular as well as square lattices. In addition, the introduction of integrability breaking fields in the Kitaev Hamiltonian can also be simulated. The simulation of the dynamics  with a time-independent Hamiltonian will be started from a fully polarized initial state , whose discrete Wigner representation is relatively simple. The possibility of using prepared ground states will also be explored. In the latter case, the system will be 'quenched' from the ground state of the Hamiltonian at $t=0$. A 'quench' is defined as the \textit{diabatic} variation of a {parameter} of the system, such as  mass, chemical potential, an external field or the exchange energies themselves. In a diabatic variation, the quench rate is faster than all the relaxation rates intrinsic to the system, thus allowing for approximating the change as instantaneous. The system, initially at an eigenstate, will no longer be in an eigenstate after the quench, thus allowing it to evolve dynamically with a time independent Hamiltonian. In all cases, the onset of universality will be determined by looking at the time dependence of inter-site correlations. It is known that the spread of correlations between two sites in the nearest neighbour case is bound inside an effective 'light cone' given by the Lieb - Robinson velocity~\cite{lr}. Long range interactions distort this cone and allow for superluminal correlations~\cite{michael}, and are expected to affect the scaling laws near the quantum critical point. Thus, the dynamics of responses are expected to differ from the Kibble-Zurek mechanism as obtained in the integrable case, and studying the changes in the critical exponents, or the scaling laws themselves, offers an exciting possibility with this approach. In addition, the onset of freezing as described above is also expected to change. Freezing is known to persist in disordered systems~\cite{freezing}, as well as in the presence of integrability breaking fields. The persistence of this phenomenon is observed in long range interactions in 2d has far-reaching implications in quantum information science, and will be investigated in a future phase of this project.
+The next phase of the project will involve breaking integrability in the Kitaev honeycomb lattice. This can be achieved in a straightforward manner by introducing long range interactions, since the Kitaev Hamiltonian remains local in the Majorana basis only if the interactions extend to nearest neighbours in the honeycomb. Long range interactions can be introduced by placing a power law dependence on the inter-site exchange energies. A rapid decay in the exchange as a function of inter-site distance can effectively replicate the nearest-neighbour case, and reducing the power law coefficient can continuously extend the interactions to longer ranges~\cite{bollinger}. The BBGKY-Wigner simulation method has shown incredible promise in this area~\cite{bbgky}, and has already acquired interest from numerous experimental groups working on 2d quantum dynamics. This method can be readily adapted to investigate the onset of universality in long range systems, as well as with anisotropic deformations in the honeycomb lattice that can lead to alternative lattice structures, such as triangular as well as square lattices. In addition, the introduction of integrability breaking fields in the Kitaev Hamiltonian can also be simulated. The simulation of the dynamics  with a time-independent Hamiltonian will be started from a fully polarized initial state , whose discrete Wigner representation is relatively simple. The possibility of using prepared ground states will also be explored. In the latter case, the system will be 'quenched' from the ground state of the Hamiltonian at $t=0$. A 'quench' is defined as the \textit{diabatic} variation of a {parameter} of the system, such as  mass, chemical potential, an external field or the exchange energies themselves. In a diabatic variation, the quench rate is faster than all the relaxation rates intrinsic to the system, thus allowing for approximating the change as instantaneous. The system, initially at an eigenstate, will no longer be in an eigenstate after the quench, thus allowing it to evolve dynamically with a time independent Hamiltonian. In all cases, the onset of universality will be determined by looking at the time dependence of inter-site correlations. It is known that the spread of correlations between two sites in the nearest neighbour case is bound inside an effective 'light cone' given by the Lieb - Robinson velocity~\cite{lr}. Long range interactions distort this cone and allow for superluminal correlations~\cite{michael}, and are expected to affect the scaling laws near the quantum critical point. Thus, the dynamics of responses are expected to differ from the Kibble-Zurek mechanism as obtained in the integrable case, and studying the changes in the critical exponents, or the scaling laws themselves, offers an exciting possibility with this approach. In addition, the onset of freezing as described above is also expected to change. Freezing is known to persist in disordered systems~\cite{freezing}, as well as in the presence of integrability breaking fields. The persistence of this phenomenon is observed in long range interactions in 2d has far-reaching implications in quantum information science and analog quantum computing, and will be investigated in a future phase of this project.
 
 The next phase of the project will involve  open quantum systems, where the reduced density matrix is evolved in time by a master equation, allowing for the inclusion of incoherent processes which represent interactions with a reservoir. Such dynamics is regularly studied in quantum optics using the \textbf{Kossakowski-Lindblad equation}, where it can represent absorption or emission from a reservoir~\cite{lindblad}. Here, the regular Liouvillean dynamics of closed quantum density matrices are dressed with Lindblad bath operators which act locally on degrees of freedom near each bath. Although this approach is not universally valid, it is a reasonable starting point to study radiative systems such as the ones being studied in this project.  This approach is computationally simpler, and the density matrix for such a mixed system can be solved using phase space methods detailed below.
 
-The final part of this project will deal with the physics of quantum information propagation in nonintegrable many body systems, and determining if the phenomenologies associated with periodically driving a many body system such as a quantum logic gate, can allow for
-controlling and directing the outcome of quantum logic gates. This leads to the possibility of eliminating the degradation of quantum information, either due to isolated bit flips or due to decoherence induced by thermalization or coupling to the external environment.  The phenomenon of Dynamical Many Body freezing as described in the paragraph above can induce effective single particle behavior even in a complex many body system, and interference in the dynamics leads to the  cancellation of all transition amplitudes, freezing out all errors that may arise due to decoherence dynamics~\cite{freezing}. The realization of quantum error correction in the manner described above is not obvious currently, since entangled qubit states may have unusual responses to driven dynamics that have not been studied so far. This final phase  involves the study of complex many body logic gates realized by interacting quantum magnets. Each magnet, capable of storing a single qubit, interacts with its neighbours via amplitude hopping, as well as repulsive pseudopotentials. These interactions can be modeled in various ways, and our focus will be on one dimensional Ising-like spins with nearest neighbour as well as long range interactions. 
+The final part of this project will deal with the physics of analog quantum information propagation in nonintegrable many body systems, and determining if the phenomenologies associated with periodically driving a quantum channel can allow for controlling and directing the preparation of the final state. This leads to the possibility of eliminating the degradation of information due to decoherence induced by thermalization or coupling to the external environment.  The phenomenon of Dynamical Many Body freezing as described in the paragraph above can induce effective single particle behavior even in a complex many body system, and interference in the dynamics leads to the  cancellation of all transition amplitudes, freezing out all errors that may arise due to decoherence dynamics~\cite{freezing}. The realization of quantum error correction in the manner described above is not obvious currently, since entangled qubit states may have unusual responses to driven dynamics that have not been studied so far. This final phase  involves the study of complex many body logic gates realized by interacting quantum magnets. Each magnet, capable of storing a single qubit, interacts with its neighbours via amplitude hopping, as well as repulsive pseudopotentials. These interactions can be modeled in various ways, and our focus will be on one dimensional Ising-like spins with nearest neighbour as well as long range interactions. 
 
 Our studies will require the use of extensive analytical and numerical techniques which are described in the sections below. My own interest in nonequilibrium dynamics stems from my undergraduate years, and I have been working with great passion in this field throughout my graduate and postdoctoral years. I have worked with many luminaries in this area, both in India as well as in the United States, and have developed an extensive network of academics who work in nonequilibrium dynamics. The opportunity offered by this fellowship will give me the ability to achieve the goals described above much more efficiently. I will present the results in national and international conferences in the BRICS countries, Europe, North America and East-Southeast Asia. I should also be able to host frequent academic visits of my colleagues to my host institute, as well as get funding for academic visits of my own to them. I will deliver seminars that will increase interest in this area among undergraduate and graduate students, attracting potential research collaborators.  Given the importance that many academics, as well as people in the industry and government, attach to the prospects of quantum computing and nonequilibrium dynamics, this research project will help keep my host at the final frontier of modern technology.
  
@@ -352,20 +187,8 @@ With the proposed project, I will bring several sorts of unique knowledge to the
 
 Second, I will also bring my extensive knowledge of condensed matter theory, many body physics, nonequilibrium field theory, nonlinear dynamics, dynamical systems and chaos to the host. My knowledge of these topics have developed under the guidance of several leaders in their respective fields in the United States and India, such as Prof L.E. Reichl (The transition to Chaos in classical and quantum systems), Prof J.K. Bhattacharjee (Nonlinear Dynamics), Prof. Krishnendu Sengupta (Nonequilibrium Field Theory), Dr. Arnab Das (Dynamics of many particle systems), Prof. Michael Kastner (Condensed Matter Theory) and others. My theoretical background encompasses numerous topics, such as  Floquet theory~\cite{floquet}, Keldysh theory as applied to the Fermi BCS problem~\cite{bcs}, Bose Einstein Condensates and the time dependent Gross-Pitaevski Bogoliubov equations and the study of excitations therein, and others. All of this knowledge will be brought to the host organization and group and shared with colleagues, graduate students and other postdocs.
 
-Thirdly, my desire to pursue this research project at Bose Institute in Kolkata stems from the presence therein of several luminaries in the field of quantum information and computing, such as Profs. Dipankar Home and Somshubhro Bandyopadhyay. I have already corresponded with both physicists regarding this project, and anticipate extensive interactions and collaborations towards a prescription for quantum error correction with periodic drives.
-
 Finally, I have made plans to enhance existing collaborations with colleagues in order to expedite the research work detailed in this proposal. Collaborators include  Profs. Michael Kastner  (National Institute for Theoretical Physics and University of Stellenbosch, South Africa), Prof. Romain Bachelard (Centro de Pesquisa em Optica e Fotonica, Sao Carlos, Brazil)  , Prof  John J. Bollinger (National Institute of Standards and Technology, Boulder, CO USA), and others. These collaborations will help bring the knowledge and expertise gained by the collaborators from abroad into India via interactions with myself. In addition, the conferences  mentioned in the previous subsection will also be attended by most condensed matter and statistical physicists in the world, and lectures and unofficial interactions therein will further disseminate expertise accordingly.
 
-\section{\sc Name of the institution where the fellowship will be availed:}
-Bose Institute\\
-93/1, Acharya Prafulla Chandra Road\\
-Kolkata - 700009\\
-West Bengal, India\\ 
-Phone: (+91)(-33) 2350-2402/2403/ 6619/6702\\
-Fax: (+91)(-33) 2350-6790
-
-\section{\sc  Recommendation of the Institution:}
-\vspace{2in}
 \pagebreak
 \begin{thebibliography}{}
   
