--- a/coarsening_proposal_generic/Coarsening_Project.tex
+++ b/coarsening_proposal_generic/Coarsening_Project.tex
@@ -87,7 +87,7 @@
 
 
  \title{Research Proposal:\\Coarsening in Classical and Quantum Systems}
- \author{Analabha Roy\\CSIR Senior Research Associate,\\ Saha Institute of Nuclear Physics,\\ Kolkata, India}
+ \author{Analabha Roy\\Assistant Professor, Department of Physics\\ The University of Burdwan,\\ Golapbag, Barddhaman, India}
  \date{\today}
 
 \begin{document}
@@ -102,7 +102,7 @@ The main objective of this research project is to understand the dynamics of \te
 
 The first part of the proposed project involves the analytical and numerical study of classical quenches in $\phi^4$ theory in  {$d$} 
 dimension. The potential in the free energy will be constructed to $4^{th}$ order in the order parameter $\phi$. The evolution of the free-energy landscape with the control parameter driving a phase transition guides the understanding of the post-quench dynamics from, typically, a disordered phase to an ordered phase. If the free energy lacks a cubic term, then phase transitions are of second order, driven by instability at criticality. If the free energy has cubic terms, then phase transitions are of first order, driven by metastability at criticality. The project involves the study of quenches to criticality, as well as sub-critical quenches by investigating the microscopic dynamics of the order parameter. This dynamics is governed by a quasi-Newtonian equation of motion with,  {for example, 
-a thermalized ensemble of initial states in a free-energy landscape with a single minimum at zero field}. Other descriptions, such as the field 
+a thermalized ensemble of initial states in a free-energy landscape with a single minimum at zero field}. Other descriptions, such as the 
 large-$\mathcal{N}$ approximation, will also be considered. After an instantaneous quench at $t=0$ the subsequent evolution of the order parameter is performed by integrating the equation of motion with the post-quenched parameters  {(the double-well structure)}. The first question to be explored is whether the system re-thermalizes to a steady state or not. This can be tested via the fluctuation-dissipation theorem, where linear responses to a small external field are compared to the field correlations. Subsequently, the temporal behavior of the equilibrating field will be studied. During the \textit{coarsening} process, space-time correlations allow for the identification of a growing length scale. Domains of equilibrium states are expected to grow with this length scale, and a spatial profile of 'kinks' or  {`domain walls'} that demarcate these regions is expected to provide insights into the coarsening process. Domain walls will be identified, whose gradients are expected to 
 drive coarsening. Coarsening is thus expected to drive the nucleation and growth of domains that support the equilibrium phase. Near criticality, divergences of time scales via critical slowing down is also known to occur, and the scaling behavior of critical quenches will also be studied analytically using scaling and renormalization group arguments. In addition, the system is expected to build fractal clusters~\cite{fractal}
 and the equilibrium and nonequilibrium contributions are multiplicatively separated. In sub-critical quenches, the asymptotic behavior of the characteristic coarsening scale relative to equilibrium correlations is expected to be governed by the dynamic scaling hypothesis~\cite{dynscal}, where the domain structure is statistically independent of time when lengths are scaled accordingly. The goals of this phase of the project are the profiling of the universal scaling laws described above, as well as the evolution of structure interfaces in the order parameter field through the kinks in the solution.
@@ -110,17 +110,24 @@ and the equilibrium and nonequilibrium contributions are multiplicatively separa
 The next phase of the project will involve studying the dynamics of open classical systems \textit{viz.} systems connected to a thermal reservoir. Classical $\phi^4$ theories of the type discussed above can be linked to closed Ising magnets, and open systems of magnets can be studied by dealing with the interactions between magnetic moments on sub-micrometre length scales. These are governed by competition between the dipolar energy and the exchange energy, the outcome of which governs the long range magnetic order, if any. In such systems, the Landau-Lifshitz-Gilbert (LLG) equation is a key model for describing the nonlinear evolution. The micromagnets in this model are built up from fermions acting under a time-dependent Zeeman field, and the Ehrenfest dynamics therein~\cite{gll:review}, together with a phenomenological damping term that takes into account the saturation of the magnetization. The dynamics of many coupled LLG systems connected to a thermal bath (canonical ensemble at equilibrium) can be 
 formulated from here. In the continuum limit, the result is a nonlinear partial differential equation in the spin field. The ensuing dynamics links the physics to the microscopic Hamiltonian structures of spin lattices, including planar XX and XY structures~\cite{laxmanan:xxxy} whose quantum evolution will be studied later. This phase of the project aims to formulate the LLG dynamics after a quench across the magnetic phase transitions, and investigate the transition to equilibration in a manner similar to that described in the paragraph above. The dynamics in these systems have wide interdisciplinary relevance. They have intimate connections with many of the well-known integrable soliton equations, including nonlinear Schr\"odinger and sine-Gordon equations~\cite{laxmanan:xxxy,sinegordon}. The possibility of classical chaos in such systems~\cite{gll:review} leads it to other disciplines, such as power generation and synchronization~\cite{lax13} and inhomogeneous filaments~\cite{lax14}. 
 
-The logical continuation of this project now draws attention to the quantum realm in such systems. At zero temperature, a closed quantum system is said to be in equilibrium when it is at the ground state (or generally speaking, any eigenstate) of the Hamiltonian of the system. At finite temperatures, a system at equilibrium can no longer be found in a single eigenstate, but is delocalized in the Hilbert space over many eigenstates with a thermal probability distribution. A \textit{diabatic quench} causes a  {parameter} to vary rapidly in comparison to the relaxation times of the excitations, both thermal and quantum. The nonequilibrium dynamics of such closed quantum systems after a quench, although an ongoing subject of study,  {are somewhat better understood than their open counterparts}, and involve principles like dephasing~\cite{thermalization} 
+Understanding classical coarsening involves universal concepts like nucleation, phase-ordering kinetics, domain growth, critical slowing down, and others. These mechanisms should occur in systems beyond the classical world as well, in phase transitions where quantum fluctuations play an important role. While the basic techniques used to study classical coarsening  are relatively well documented in the literature, the techniques needed to deal with the statics and dynamics of quantum macroscopic systems are much less known in general.Thus, the logical continuation of this project now draws attention to the quantum realm in such systems. At zero temperature, a closed quantum system is said to be in equilibrium when it is at the ground state (or generally speaking, any eigenstate) of the Hamiltonian of the system. At finite temperatures, a system at equilibrium can no longer be found in a single eigenstate, but is delocalized in the Hilbert space over many eigenstates with a thermal probability distribution. A \textit{diabatic quench} causes a  {parameter} to vary rapidly in comparison to the relaxation times of the excitations, both thermal and quantum. The nonequilibrium dynamics of such closed quantum systems after a quench, although an ongoing subject of study,  {are somewhat better understood than their open counterparts}, and involve principles like dephasing~\cite{thermalization} 
 and the Eigenstate Thermalization hypothesis~\cite{thermalization,krishrev}, the Kibble-Zurek mechanism~\cite{bikashbabu}, Landau-Zener tunneling~\cite{bikashbabu}, semiclassical mean field dynamics like those obtained from the Gross-Pitaevski equation for Bose Einstein condensates~\cite{colrev} and the Ginzburg Landau equation for superconductivity~\cite{rammer}, diagrammatic perturbation theory~\cite{gorkov, volkov}, and others. The quantum dynamics part of this research project will involve the application of some of the above-mentioned ideas, as well as newer stochastic methods, to \textit{open quantum systems} \textit{viz.} systems that can exchange energy via connections to a reservoir of heat. Away from $T=0$, the pure quantum dynamics has to be weighed by the thermal probabilities of the initial state that is presumed to be in thermal equilibrium. For open systems, such dynamics can be studied by completely specifying the nature of the reservoir, and treat the coupled system + reservoir as a closed 
 quantum system, or by treating the reservoir stochastically. The nonequilibrium dynamics, thus formulated, allows the profiling of local quantum correlations and coarse-grained responses whose 
-spatial extent described coarsening that is expected to grow towards the steady state. Analytics will involve modeling such systems by \textit{spin chain heterostructures}~\cite{arrachea},  constructed by linking finite or semi-infinite XX or XY spin chains (of various anisotropies) to each other at their ends. This model is analogous to well-established models that describe transport in many body systems, as well as nano and mesoscopic systems~\cite{arrachea,openspin, imry}. The dissipative dynamics of the central chain after a quench can thus be obtained from the Hamiltonian quantum dynamics of the entire system of links. Such systems can be mapped onto p-wave BCS superconducting fermions, and the nonequilibrium Dyson equation can be formulated in a manner similar to~\cite{gorkov, volkov}. Post-quench dynamics can be studied by solving the resultant equations for the local fermion correlations by diagrammatic approximations to the nonequilibrium self-energy, either in the collisionless regime~\cite{volkov,
+spatial extent described coarsening that is expected to grow towards the steady state. 
+
+
+
+The fluctuating microscopic order parameter in these systems, when  described in terms of a continuous coarse-grained field, can be expressed in terms of order-parameter fields in a free-energy functional using path-integral methods. This is the motivation for studying the continuous field equations in the first part of the project. Ideally, the field equations, suitably modified for quantum effects, should be derived from the discrete stochastic dynamics of \textit{spin chain heterostructures}~\cite{arrachea}. These are  constructed by linking finite or semi-infinite XX or XY spin chains (of various anisotropies) to each other at their ends. This model is analogous to well-established models that describe transport in many body systems, as well as nano and mesoscopic systems~\cite{arrachea,openspin, imry}. The dissipative dynamics of the central chain after a quench can thus be obtained from the Hamiltonian quantum dynamics of the entire system of links. Such systems can be mapped onto p-wave BCS superconducting fermions, and the nonequilibrium Dyson equation can be formulated in a manner similar to~\cite{gorkov, volkov}. Post-quench dynamics can be studied by solving the resultant equations for the local fermion correlations by diagrammatic approximations to the nonequilibrium self-energy, either in the collisionless regime~\cite{volkov,
 ncnsd2012}, or in the regime where collisions are rapid enough to have relaxed away and only order parameter dynamics remains~\cite{ncnsd2012}. The steady state properties of such systems have already been investigated in the context of thermal transport by Arrachea \textit{et. al.}~\cite{arrachea}, and can easily be adapted to dynamics farther from equilibrium. In this manner, the slow collision dynamics (in the mean field or with Gaussian fluctuations) can be mapped onto a set of nonlinear Schr\"odinger equations coupled by a self consistent update for the superconducting gap. The scaling laws for the responses in such dynamics will also be obtained.  In the fast collision regime, the dynamics can be approximated to be near equilibrium, with a classical $\phi^4$ approximation in the path integral (see~\cite{colrev} and the references therein). This allows for a connection with the classical problem discussed above, and similar numerical methods can be used. Evaluating the Goldstone modes by a linear 
 stability analysis of the dynamics around equilibrium will also be done so as to profile excitations and fluctuations about the mean field.
 
 The approach detailed above, with the full Hamiltonian description of the system and reservoir, comes at the price of numerous analytical and computational difficulties. The final part of this project will deal with alternative formalisms of open quantum systems, where the reduced density matrix is evolved in time by a master equation, allowing for the inclusion of incoherent processes which represent interactions with a reservoir. Such dynamics is regularly studied in quantum optics using the \textbf{Kossakowski-Lindblad equation}, where it can represent absorption or emission from a reservoir~\cite{lindblad}. Here, the regular Liouvillean dynamics of closed quantum density matrices are dressed with Lindblad bath operators which act locally on degrees of freedom near each bath. Although this approach is not universally valid, it is a reasonable starting point to study Heisenberg chains such as the ones being studied in this project~\cite{spinchains:lindblad}. Here, as in the previous paragraph, the ends of 
 a finite spin chain are coupled to canonical Lindblad spin operators whose amplitudes are determined by the thermodynamics of the reservoir.  This approach is computationally simpler, and the density matrix for such a mixed system can be solved using DMRG methods. The dynamics of coarsening in Lindblad systems can be solved after a quench in this manner.
 
-Coarsening is a very basic aspect of non-equilibrium quantum dynamics. Understanding it would shine light on a vast landscape of quantum phenomena ranging from the process of defect generation in critical quantum relaxation~\cite{relaxation}, thermalization of a closed many-body quantum system~\cite{krishrev, thermalization}, thermalization and effective temperatures of open quantum systems~\cite{thermopen}, glassy systems~\cite{glassy}, mesoscopic systems~\cite{meso}, to the operation of near future quantum devices like an analog quantum computer~\cite{annealing}. The potential and the target of our project, as well as its methodologies, are thus genuinely interdisciplinary and of very broad interest.
+Coarsening is a very basic aspect of non-equilibrium quantum dynamics. Understanding this phenomenon involves answering  several generic questions on the nature of out-of-equilibrium structures, the relaxation mechanisms that take place after
+a quench, and whether equilibrium thermodynamics can be used to describe these states.  Similar questions can be asked in a wide variety of well-known problems, ranging from simple mathematical voter models, which are continuous Markov processes involving the evolution of the opinions of voters based on their interaction with neighbours~\cite{votermodel}, to symmetry breaking transitions believed to have occurred in the early universe, where the formation of topological defects (e.g cosmic strings) has been proposed as a possible mechanism for the formation of cosmic structure~\cite{cosmicstrings}. Coarsening models are also applicable to many ongoing problems of interest in theoretical physics, ranging from the process of defect generation in critical quantum relaxation~\cite{relaxation}, thermalization of a closed many-body quantum system~\cite{krishrev, thermalization}, thermalization and effective temperatures of open quantum systems~\cite{thermopen}, glassy systems~\cite{glassy}, mesoscopic systems~\cite{meso}, to the operation of near future quantum devices like an analog quantum computer~\cite{annealing}. 
+
+Thus, these questions are generic and fundamental in nature, and answering them would shine light on a vast landscape of physical phenomena. The potential and the target of our project, as well as its methodologies, are thus genuinely interdisciplinary and of very broad interest.
  
 \section{Research methodology and approach}
 \label{sec:research_methodology}
@@ -361,6 +368,13 @@ D.A. King, Nature {\bf 430}, 311-316 (2004). Also see D. Dickson, \textit{China,
 \bibitem{indoaglob}
 The Royal Society, \textit{Knowledge, networks and nations, Final report}, RS Policy document 03/11
 Issued: March 2011 DES2096, ISBN: $9780854038909$, Available online at \url{http://royalsociety.org/policy/projects/knowledge-networks-nations/report/}.
+
+\bibitem{votermodel}
+J. T. Cox and D. Griffeath, Ann. Probab. {\bf 14},2, 347-370 (1986).
+
+\bibitem{cosmicstrings}
+T. W. B. Kibble, J. Phys. A: Math. Gen. {\bf 9} 1387 (1976).
+
 \end{thebibliography}
 
 \end{document}
